--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <title>Bish Bosh</title>
 </head>
 <body>
+    <div>
+        <label>Number of times: </label>
+        <input id="nrOfTimes" type="number">
+        </div>
+        <div>
+        <label>First division: </label>
+        <input id="firstDivision" type="number">
+        </div>
+        <div>
+        <label>Second division: </label>
+        <input id="secondDivision" type="number">
+        </div>
+        <button id="btnSubmit">Submit</button><br>
+        
+        <div id="whatever">
+    </div>
     <script src="src/bish_bosh.js"></script>
+    <script>
+        function start(){
+            let outputDiv = document.getElementById("whatever");
+            /** Clear outpout div **/
+            outputDiv.innerHTML = "";
+    
+            const [nrOfTimes, firstDivision, secondDivision] = getFormValues();
+
+            for(var i = 1; i <= nrOfTimes; i++){
+                const {className, textContent} = bishBosh(i, firstDivision, secondDivision);
+                outputDiv.innerHTML += `<p class="${className}">${textContent}</p>`;
+            }
+        }
+
+        document.getElementById("btnSubmit").addEventListener("click", start);
+    </script>
 </body>
 </html>
