--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Bish Bosh</title>
 </head>
 <body>
+    <header>
+        <h1>Bish Bosh v2.0</h1>
+    </header>
     <div>
         <label>Number of times: </label>
         <input id="nrOfTimes" type="number">
@@ -21,6 +25,12 @@
         
         <div id="whatever">
     </div>
+
+    <footer>
+        <div>John Lundgren</div>
+        <div>&copy;WealthyCorp</div>
+    </footer>
+    
     <script src="src/bish_bosh.js"></script>
     <script>
         function start(){
