--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,12 +12,10 @@
   <script src="lib/jasmine-3.3.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
+  <script src="src/bish_bosh.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+  <script src="spec/bish_bosh.spec.js"></script>
 
 </head>
 
